<resources>
    <string name="app_name">eMaisha Agent</string>
    <string name="don_t_have_an_account_swipe_right_to">Don’t have an account? Swipe right to</string>
    <string name="create_a_new_account">Create a New Account.</string>
    <string name="welcome_please_login_to_your_account">Welcome, Please Login to your Account</string>
    <string name="email_address_mobile_number">Email Address / Mobile Number</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot password</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="next_of_kin_relation">Next of Kin Relation</string>
    <string name="next_of_kin_contact">Next of Kin Contact</string>
    <string name="nin">National ID NIN</string>
    <string name="submit">Submit</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="upload_your_nid">Upload Your National ID</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_sent_a_code">We sent a code via SMS to verify your mobile number</string>
    <string name="enter_otp_number">Enter Your OTP Number</string>
    <string name="didnt_receive_code">I didn\'t recieve a code!</string>
    <string name="resend_code">Resend Code</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_the_phone_number_you_used_to_create_your_account_and_we_will_send_you_an_otp_to_reset_your_password">Enter the Phone number you used to create your account and we will send you an OTP to reset your password</string>
    <string name="send_otp">Send OTP</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_offers">OFFERS</string>
    <string name="title_transactions">TRANSACTIONS</string>
    <string name="title_account">ACCOUNT</string>
    <string name="day">MONDAY</string>
    <string name="temp_max">32.6</string>
    <string name="temp_min">16.8</string>
    <string name="humidity">Humidity</string>
    <string name="rain">Rain</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="humidity_default">48% Max</string>
    <string name="rain_default">No</string>
    <string name="visibility_default">25 Km</string>
    <string name="wind_default">12 m/h</string>
    <string name="humidity_default2">30.9% Min</string>
    <string name="label_wallet_balance">WALLET BALANCE</string>
    <string name="wallet_balance_default">UGX 0.0</string>
    <string name="label_commissions">Commissions</string>
    <string name="commissions_default">UGX 0.0</string>
    <string name="label_profiling">Profiling</string>
    <string name="label_wallet">Wallet</string>
    <string name="data_collection">Data Collection</string>
    <string name="label_market_services"><![CDATA[market & services]]></string>
    <string name="title_activity_profiling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_farmer">Farmer</string>
    <string name="label_association">Association</string>
    <string name="label_agro_input_dealer">Agro Input Dealer</string>
    <string name="label_bulk_buyers">Bulk Buyers</string>
    <string name="label_market_data">Market Data</string>
    <string name="label_farm_data">Farm Data</string>
    <string name="label_agro_input">Agro Input</string>
    <string name="label_sell_produce">Sell Produce</string>
    <string name="label_farm_equipments">Farm Equipments</string>
    <string name="label_soil_testing">Soil Testing</string>
    <string name="label_market">Market</string>
    <string name="label_market_price">Market Price</string>
    <string name="label_report_pest">Report Pest</string>
    <string name="label_scouting">Scouting</string>
    <string name="enter_personal_details">Enter Personal Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="household_size">Household Size</string>
    <string-array name="source_of_income">
        <item>Select</item>
        <item>Farming</item>
        <item>Employment Earnings</item>
        <item>Employment Income</item>
        <item>Business Enterprises</item>
        <item> Cottage Industry</item>
        <item>Property Income</item>
        <item>Family/Friends/Relatives Support</item>
        <item>Organization Support</item>
        <item>Sale of Assets</item>


    </string-array>
    <string name="household_head">Household Head</string>
    <string name="enter_contact_details">Enter Contact Details</string>
    <string name="next_of_kin_address">Next of Kin Address</string>
    <string name="previous">Previous</string>
    <string name="enter_farming_details">Enter Farming Details</string>
    <string name="farming_land_size">Farming Land Size</string>
    <string name="second_livestock">Second Livestock</string>
    <string name="default_pop_up_content">Farmer JOHN ZIMULA A based in\nARUA bas been successfully\nRegistered and his profile created</string>
    <string name="association_name">Association Name</string>
    <string name="year_of_registration">Year of Registration</string>
    <string name="full_address">Full Address</string>
    <string name="association_telephone">Association Telephone</string>
    <string name="association_email">Association Email</string>
    <string name="number_of_members">Number of Members</string>
    <string name="chairperson">Chairperson</string>
    <string name="contact">Contact</string>
    <string name="vice_chairperson">Vice Chairperson</string>
    <string name="owner_contact">Owner Contact</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="certification">Certification</string>
    <string name="certificate_number">Certificate Number</string>
    <string name="business_name">Business Name</string>
    <string name="actual_address">Actual Address</string>
    <string name="street_address">Street Address</string>
    <string name="contact_person">Contact Person</string>
    <string name="per_unit">Per Unit</string>
    <string name="date">Date</string>
    <string name="wholesale_price">Wholesale Price</string>
    <string name="retail_price">Retail Price</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="district">District</string>
    <string name="sub_county">Sub-County</string>
    <string name="village">Village</string>
    <string name="farmer_phone_number">Farmer Phone No</string>
    <string name="signs_and_symptoms">Signs and Symptoms</string>
    <string name="damage_assessment">Damage Assessment</string>
    <string name="suspected_pest_disease">Suspected Pest/Disease</string>
    <string name="recommendation">Recommendation</string>
    <string name="browse">Browse</string>
    <string name="photo_of_the_damage">Photo of the Damage</string>
    <string name="infested">Infested</string>
    <string name="infestation_type">Infestation Type</string>
    <string name="infestation">Infestation</string>
    <string name="infestation_level">Infestation Level</string>
    <string name="edit">Edit</string>
    <string name="default_user_name">Sserubiri Joseph</string>
    <string name="user_image_placeholder">user_image</string>
    <string name="default_user_phone_number">+256-987654312</string>
    <string name="default_user_location1">Nakibinge, Rd, Kampala,</string>
    <string name="default_user_location2">Uganda</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_rating_reviews"><![CDATA[My Rating & Reviews]]></string>
    <string name="change_password">Change Password</string>
    <string name="customer_support">Customer Support</string>
    <string name="official_website">Official Website</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="news">News</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="religion">Religion</string>
    <string name="level_of_education">Level of Education</string>
    <string name="marital_status">Marital Status</string>
    <string name="language_used">Language Used</string>
    <string name="main_crop">Main Crop</string>
    <string name="second_crop">Second Crop</string>
    <string name="third_crop">Third Crop</string>
    <string name="main_livestock">Main Livestock</string>
    <string name="crop_value_chain">Crop Value Chain</string>
    <string name="livestock_value_chain">Livestock Value Chain</string>
    <string name="main_source_of_funding">Main Source of Funding</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="category">Category</string>
    <string-array name="commodities">
        <item>Select</item>
        <item>Coffee</item>
        <item>Tea</item>
        <item>Cotton</item>
        <item>Tobacco</item>
        <item>Maize</item>
        <item>Millet</item>
        <item>Sorghum</item>
        <item>Rice</item>
        <item>Plantains</item>
        <item>Cassava</item>
        <item>Yams</item>
        <item>Sweet potatoes</item>
        <item>Irish potatoes</item>
        <item>Beans</item>
        <item>Cow peas</item>
        <item>Field peas</item>
        <item>Pigeon peas</item>
        <item>Groundnuts</item>
        <item>Soya beans</item>
        <item>Sim sim</item>
        <item>Cattle</item>
        <item>sheep</item>
        <item>goat</item>
        <item>pigs</item>
        <item>poultry</item>

    </string-array>
    <string name="market_name">Market Name</string>
    <string name="town">Town</string>
    <string name="variety">Variety</string>
    <string name="measurement_units">Measurement Units</string>
    <string name="default_percentage_offer">30% OFF</string>
    <string name="img_placeholder">img_placeholder</string>
    <string name="exclusive_offers">EXCLUSIVE OFFERS</string>
    <string name="default_expiry_period">Expires in 20 days</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="flat_discounts_on_every_purchase">Flat Discounts on Every Purchase</string>
    <string name="placeholder_text2">10-40% OFF</string>
    <string name="placeholder_text3">Discount Coupon : 146761</string>
    <string name="placeholder_text4">15 Days</string>
    <string name="default_market_price_date">Sep 08, 2020</string>
    <string name="default_market_price_variety">Yellow Maize</string>
    <string name="default_market_price_market">Gulu Market</string>
    <string name="default_market_price_retail_price">UGX 800/Kg</string>
    <string name="default_market_price_wholesale_price">UGX 500/Kg</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="app_terms_services">By creating an account, you agree to our</string>
    <string name="registration_status">Registration Status</string>
</resources>