<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offers"
        android:enabled="true"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:enabled="true"
        android:title="@string/title_transactions" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/title_account"/>

</menu>