<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.datacollection.DataCollectionConfirmMarketPriceFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10dp"
    android:background="@drawable/card_background_with_no_padding">

<LinearLayout
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="15dp"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:text="@string/default_market_price_date"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="#272727"/>


</LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/variety"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/default_market_price_variety"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="#272727"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_market"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/default_market_price_market"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="#272727"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/retail_price"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/default_market_price_retail_price"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="#272727"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wholesale_price"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/default_market_price_wholesale_price"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="#272727"/>


    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:id="@+id/confirm_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_details"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>