<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cabraltech.emaishaagentsapp.fragments.bottomnavbar.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.cabraltech.emaishaagentsapp.fragments.bottomnavbar.OffersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.cabraltech.emaishaagentsapp.fragments.bottomnavbar.TransactionsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_transactions" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.cabraltech.emaishaagentsapp.fragments.bottomnavbar.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"/>
</navigation>