<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity"
    android:background="@color/activityBg">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

        </LinearLayout>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="387dp"
            android:layout_below="@+id/logo"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_rectangle_white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="25dp"
                android:text="@string/welcome_please_login_to_your_account"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="39dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:background="@drawable/rounded_rectangle_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightGray"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/welcome_please_login_to_your_account"
                android:textColor="#AEAEAE"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email_address_phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_rectangle_edit_text"
                android:hint="@string/email_address_mobile_number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_rectangle_edit_text"
                android:hint="@string/password"
                android:textSize="14sp" />

            <Button
                android:id="@+id/next_button"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/next" />

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="8dp"
                android:text="@string/forgot_password"
                android:textColor="#707070"
                android:textStyle="italic"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_form_layout"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_swipe_right_to"
                android:textColor="#515C6F"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/create_new_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/create_a_new_account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>

</RelativeLayout>