<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_20dp"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:layout_marginBottom="@dimen/dimen_10dp"
    android:background="@drawable/recommended_card2_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/recommended_offer_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/agriculture"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/recommended_offer_img">
    <TextView
        android:id="@+id/placeholder_text2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:text="@string/placeholder_text2"
        android:textColor="#222222"
        android:textSize="18sp"
        android:textStyle="bold"
         />
    <TextView
        android:id="@+id/placeholder_text1_tv"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flat_discounts_on_every_purchase"
        android:textColor="#222222"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/placeholder_text3_tv"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text3"
        android:textColor="#222222"
        android:textSize="16sp" />
        <TextView
            android:id="@+id/placeholder_text4_tv"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text4"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>